k8s/monitoring/grafana/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: http-grafana
  selector:
    app: grafana
