k8s/monitoring/grafana/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana-frontend
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    # traefik.ingress.kubernetes.io/router.tls.certresolver: le
    # traefik.ingress.kubernetes.io/router.middlewares: kube-system-require-admin-auth@kubernetescrd

spec:
  rules:
    - host: monitoring.slashdev.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
